--- a/src/app.html
+++ b/src/app.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <title>Splendid Food</title>
-    <link rel="stylesheet" href="styles/style.min.css">
-    <link rel="icon" href="../public/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../public/favicon.ico" type="image/ico">
+    <link rel="stylesheet" href="styles/style.min.css" />
+    <link rel="icon" href="../public/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../public/favicon.ico" type="image/ico" />
   </head>
+
   <body>
-
     <div id="app">
-
       <header class="top-bar spread">
         <nav class="top-bar-nav">
           <a href="#" class="top-bar-link">
@@ -23,7 +22,8 @@
             <span>Past Orders</span>
           </a>
         </nav>
-        <a href="#" class="top-bar-cart-link">
+        <!-- call toggleSidebar method using @click -->
+        <a @click="toggleSidebar" class="top-bar-cart-link">
           <i class="icofont-cart-alt icofont-1x"></i>
           <span>Cart (0)</span>
         </a>
@@ -36,15 +36,11 @@
       </div>
 
       <main class="wrapper">
-
         <h2>Recommended</h2>
 
         <div class="recommended">
-
           <div class="card">
-            <div class="card-title">
-              Carrots
-            </div>
+            <div class="card-title">Carrots</div>
             <div class="card-body">
               <i class="icofont-10x icofont-carrot"></i>
               <form>
@@ -60,16 +56,15 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">
-                    $4.82
-                  </div>
+                  <div class="cell">$4.82</div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model.number="inventory.carrots">
+                    <!--                    this will store the card number to the inventory object and add it to the inventory-->
+                    <input type="number" v-model.number="inventory.carrots" />
                   </div>
                 </div>
               </form>
@@ -82,9 +77,7 @@
           </div>
 
           <div class="card">
-            <div class="card-title">
-              Pineapples
-            </div>
+            <div class="card-title">Pineapples</div>
             <div class="card-body">
               <i class="icofont-10x icofont-pineapple"></i>
               <form>
@@ -100,16 +93,15 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">
-                    $1.62
-                  </div>
+                  <div class="cell">$1.62</div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model="inventory.pineapples">
+                    <!--                    this will store the card number to the inventory object and add it to the inventory-->
+                    <input type="number" v-model="inventory.pineapples" />
                   </div>
                 </div>
               </form>
@@ -120,9 +112,7 @@
           </div>
 
           <div class="card">
-            <div class="card-title">
-              Cherries
-            </div>
+            <div class="card-title">Cherries</div>
             <div class="card-body">
               <i class="icofont-10x icofont-cherry"></i>
               <form>
@@ -138,16 +128,15 @@
                   <div class="cell">
                     <label>Price:</label>
                   </div>
-                  <div class="cell">
-                    $1.04
-                  </div>
+                  <div class="cell">$1.04</div>
                 </div>
                 <div class="row">
                   <div class="cell">
                     <label>Quantity:</label>
                   </div>
                   <div class="cell">
-                    <input type="number" v-model="inventory.cherries">
+                    <!--                    this will store the card number to the inventory object and add it to the inventory-->
+                    <input type="number" v-model="inventory.cherries" />
                   </div>
                 </div>
               </form>
@@ -156,42 +145,123 @@
               <button class="btn btn-light">Add to cart</button>
             </div>
           </div>
-
         </div>
-
       </main>
 
-      <footer>
-      </footer>
+      <!-- to show the sidebar; and use toggle using the object to pass it to the method using :toggle -->
+      <sidebar
+       v-if="showSidebar" 
+       :toggle="toggleSidebar"
+       :cart="cart"
+       />
 
+      <footer></footer>
     </div>
-      
+
     <script src="https://unpkg.com/vue@next"></script>
+
     <script>
+      // create a variable to store all product
       let app = Vue.createApp({
         data() {
           return {
-            inventory: {
-              carrots: 0,
-              pineapples: 0,
-              cherries: 0
-            },
+            // to hidesidebar
+            showSidebar: false,
+
+            inventory: [],
+            // store what items are in the cart
             cart: {
               carrots: 0,
               pineapples: 0,
-              cherries: 0
-            }
-          }
+              cherries: 0,
+            },
+          };
         },
+        // add to card method
         methods: {
           addToCart(type) {
-            this.cart[type] += this.inventory[type]
+            //receive type and number
+            this.cart[type] += this.inventory[type];
+            // to check the changes use log
             console.log(this.cart)
+          },
+          toggleSidebar() {
+            this.showSidebar = !this.showSidebar
           }
+        },
+        // you need to us async if you are going to use await
+        async mounted(){
+          // fetch json data food.json
+          const res = await fetch('./food.json')
+          const data = await res.json()
+          this.inventory = data
         }
-      })
+      });
 
-      app.mount('#app')
+      // create a component for the sidebar to reuse it
+      app.component('sidebar', {
+        // use prop(s) to pass in the initial value of toggle for the x button
+        props: ['toggle', 'cart'],
+        // add computed for the total number in cart
+        computed: {
+          cartTotal() {
+            // round the total to two(2) decimals
+            return (this.cart.carrots * 4.82).toFixed(2)
+          }
+        },
+        template: `
+          <aside class="cart-container">
+            <div class="cart">
+              <h1 class="cart-title spread">
+                <span>
+                  Cart
+                  <i class="icofont-cart-alt icofont-1x"></i>
+                </span>
+                <button @click="toggle" class="cart-close">&times;</button>
+              </h1>
+
+              <div class="cart-body">
+                <table class="cart-table">
+                  <thead>
+                    <tr>
+                      <th><span class="sr-only">Product Image</span></th>
+                      <th>Product</th>
+                      <th>Price</th>
+                      <th>Qty</th>
+                      <th>Total</th>
+                      <th><span class="sr-only">Actions</span></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td><i class="icofont-carrot icofont-3x"></i></td>
+                      <td>Carrot</td>
+                      <td>$1.00</td>
+                      <!-- call the cart to update value -->
+                      <td class="center">{{ cart.carrots }}</td>
+                      <!-- use backticks to indicate that the dollar sign is not a string to avoid errors -->
+                      <td>\${{ (cart.carrots * 4.82).toFixed(2)}}</td>
+                      <td class="center">
+                        <button class="btn btn-light cart-remove">
+                          &times;
+                        </button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+
+                <p class="center"><em>No items in cart</em></p>
+                <div class="spread">
+                  <span><strong>Total:</strong> \${{ cartTotal }}</span>
+                  <button class="btn btn-light">Checkout</button>
+                </div>
+              </div>
+            </div>
+          </aside>
+      `,
+      });
+
+      app.mount("#app");
     </script>
   </body>
 </html>
